# smart_server

./: CMakeLists.txt  README.md  appclient.cc  client.cc  client1.cc  codec.h  dbmanager.cc  dbmanager.h  device_manager.cc  device_manager.h  homecenter_manager.cc  homecenter_manager.h  server.cc  smart_net.h  user_manager.cc  user_manager.h
db/: CMakeLists.txt  dbaccess.cc  dbaccess.h  dbmanager.cc  dbmanager.h  smart.sql
